--- a/package.json
+++ b/package.json
@@ -131,8 +131,7 @@
 		"typescript": "^4.1.3",
 		"uuid": "^8.3.2",
 		"web-component-analyzer": "^1.1.6",
-		"query-ast": "1.0.3",
-		"scss-parser": "1.0.4"
+		"xmlhttprequest-ssl": "^1.6.2"
 	},
 	"engines": {
 		"node": ">=12.18.4"
