build(workspace): update vulnerable minimist and yarn

--- a/package.json
+++ b/package.json
@@ -156,7 +156,5 @@
 		"disableUsageStatistics": true
 	},
 	"_void_cache": true,
-	"resolutions": {
-		"**/glob-parent": "^6.0.2"
-	}
+	"packageManager": "yarn@3.2.0"
 }
